# realtime-multiplayer-game-platform

./: README.md
dotc-backend/: .gitignore  ARCHITECTURE_REVIEW.md  README.md  WEBSOCKET_API.md  analyze_codebase.py  generate_ws_docs.py  pyproject.toml  requirements.txt
dotc-backend/app/: main.py
dotc-backend/app/api/: exception_handlers.py  router.py  schemas.py
dotc-backend/app/api/endpoints/: debug.py  games.py  players.py
dotc-backend/app/database/: commands.py  interfaces.py  mappers.py  orm_models.py  queries.py
dotc-backend/app/dependencies/: dependencies.py  interfaces.py
dotc-backend/app/domain/: enums.py  models.py
dotc-backend/app/game/: effect_executor.py  exceptions.py  game_manager.py  interfaces.py
dotc-backend/app/game/effects/: devious_effects.py  event_effects.py  interfaces.py  set_effects.py
dotc-backend/app/game/helpers/: commutative_dict.py  notificators.py  turn_utils.py  validators.py
dotc-backend/app/game/services/: game_setup_service.py  turn_service.py  (+3 more)
dotc-backend/app/websockets/: connection_manager.py  interfaces.py  router.py
dotc-backend/tests/: test_dependencies.py  test_end_to_end.py
dotc-backend/tests/api/: conftest.py  test_debug.py  test_games.py  test_games_leave.py  test_games_sorted_players.py  test_players.py
dotc-backend/tests/database/: conftest.py  test_commands.py  test_queries.py
dotc-backend/tests/effects/: test_hide_secret_social_disgrace.py
dotc-backend/tests/websockets/: test_connection_manager.py  test_notificator_more.py  test_router.py  test_sd_notifications.py  test_vote_websocket_flow.py
(+179 files in other folders)
