[project]
name = "dotc-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "esper>=3.4",
  "fastapi[all]>=0.117.1",
  "httpx>=0.28.1",
  "pydantic>=2.11.9",
  "pytest>=8.4.2",
  "sqlalchemy>=2.0.43",
  "uvicorn>=0.37.0",
  "watchfiles>=1.1.0",
  "websockets>=12.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=6.1.1-1",
]

[project.scripts]
test-watch = "'watchfiles --ignore-paths '.venv,.pytest_cache,*/__pycache__' 'uv run test'"
# Define un atajo llamado "test:watch" que usa el comando de watchfiles.

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
pythonpath = ["."]    # donde buscar codigo fuente 
testpaths = ["tests"] # donde buscar tests
addopts = "-v -s"     # verboso y mostrar prints

[tool.ruff]
# Puedes añadir configuraciones globales de ruff aquí si quieres.
# Por ejemplo, la longitud máxima de línea:
line-length = 80

[tool.coverage.run]
omit = [
  "*/interfaces.py",           # Excluye cualquier archivo llamado interfaces.py
  "tests/*",                   # Excluir los tests en si
  "app/domain/*",              # También es común excluir enums y models puros
  "app/api/schemas.py",        # Y los schemas de Pydantic
  "app/websockets/protocol/*", # Y los msjs, events y details de ws
  # ... cualquier otro archivo sin lógica ...
]
